<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment_charla.Clasificacion_temas_charla">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/verde2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_atras_ce"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/abc_vector_test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/temas_tra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/ch_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_atras_ce"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio1"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio2"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />



                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio3"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />





                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio4"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio5"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio6"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio7"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio8"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio9"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio10"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio11"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio12"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio13"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio14"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />



                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio15"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />


                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbxtcharla16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="6dp"
                    android:button="@drawable/estilo_checkbox"
                    android:layoutDirection="rtl"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/ch_criterio16"
                    android:textColor="@color/gris2"
                    app:buttonTint="@color/verde2" />



            <Button
                android:id="@+id/btn_siguiente"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="66dp"
                android:text="@string/next"
                app:cornerRadius="100dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="620dp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>